# mist-demo

./: .gitignore  .pre-commit-config.yaml  Makefile  NOTICE.md  PretrainingMIST.ipynb  README.md  activate  deepspeed.sh  finetune.py  fixup_libs  hostfile  poetry.toml  pyproject.toml  requirements.txt  setup.py  spack.yaml  train.py  training_container.def
.github/workflows/: CI.yaml  pre-commit.yml  smirk-ci.yml
containers/: .gitignore  Makefile  polaris-deep-learning.def  spack-mpich.def  spack.yaml
containers/templates/container/: singularity.def
electrolyte_fm/: design.py
electrolyte_fm/data_modules/: __init__.py  data_utils.py  multitask_dataset.py  property_prediction_dataset.py  roberta_dataset.py
electrolyte_fm/hpc/: pretrain_multinode_arjuna.sh  pretrain_multinode_bridges.sh
electrolyte_fm/models/: __init__.py  classification_head.py  dataset.py  lm_classification.py  lm_finetuning.py  lm_multitask_classification.py  lm_regression.py  model_utils.py  molecule_net_tasks.py  prediction_task_head.py  property_prediction_dataset.py  roberta_base.py  roberta_classification.py  roberta_dataset.py  roformer.py  roformer_dataset.py  single_task_head.py
electrolyte_fm/pretrained_tokenizers/: zinc250k_vocab.txt  zinc250k_xyz_vocab.txt
electrolyte_fm/pretrained_tokenizers/SMILESWordPieceTokenizer/: vocab.txt
electrolyte_fm/pretrained_tokenizers/XYZWordPieceTokenizer/: vocab.txt
electrolyte_fm/pretrained_tokenizers/ZINC_250k_XYZ/: merges.txt  vocab.json
electrolyte_fm/tokenize/: process.py  spe.py
electrolyte_fm/training/: mlm_pretraining.py  tokenizer.py
electrolyte_fm/utils/: callbacks.py  ckpt.py  decorator.py  lr_schedule.py  tokenizer.py
mist/data_modules/: __init__.py  data_utils.py  roberta_dataset.py
mist/models/: model_utils.py  roberta_base.py
mist/utils/: callbacks.py  ckpt.py  tokenizer.py
mist_demo/finetuning/: optimize_hyperparams.py  regression_model.py
mist_demo/inference/: molecular_property_prediction.ipynb
mist_demo/models/: __init__.py  finetuned.py  normalize.py  prediction_task_head.py  pretrained.py  utils.py
notebooks/: PretrainingMIST.ipynb  UnderstandingMIST.ipynb
opt/: collate_job_files  job_stats
smirk/: Cargo.toml  README.md  pyproject.toml  selfie.txt  smile.txt
smirk/opt/: element_regex.py  selfies_vocab.py
smirk/smirk/: __init__.py  vocab_selfies.json  vocab_smiles.json
smirk/src/: gpe.rs  lib.rs  pretokenizer.rs  split.rs  split_selfies.rs  split_smiles.rs  split_structure.rs  tokenizer.rs
smirk/src/pre_tokenizers/: mod.rs  smirk.rs  split_selfies.rs  split_smiles.rs  split_structure.rs
smirk/test/: test_chem_piece.py  test_fast_tokenizer.py  test_smirk.py  test_smirk_piece.py  test_tokenize.py  test_tokenize_selfies.py  test_tokenize_smiles.py
submit/: artemis.j2  artemis.yaml  cliopts.j2  default.yaml  default_pretrain.yaml  enable_internet.sh  finetune.yaml  h001.j2  h001.yaml  h001_finetune.j2  h001_train.j2  multitask_classification.yaml  nsys.yaml  polaris.j2  polaris.sh  polaris.yaml  polaris2.sh  polaris_launcher.sh  pretrain.yaml  proxy_settings.sh  run-polaris-generation.sh  run-polaris.sh  set_node_rank  spark-submit.sh  submit.py  utils.j2
test/: test_ckpt.py  test_cli.py  test_lr.py  test_submit.py  test_tokenize.py
tutorials/: 01_inference.ipynb  molecular_property_prediction.ipynb  run_finetuning.ipynb
