[project]
name = "mist"
version = "0.1.0"
description = "Walkthrough of pre-training MIST (Molecular Insight SMILES Transformer)"
authors = [
    { name = "Anoushka Bhutani", email = "abhutani@umich.edu" },
    { name = "Alexius Wadell", email = "awadell@umich.edu" },
]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "numpy<2.0.0",
    "torch~=2.3",
    "torchvision>=0.18.0,<0.19",
    "lightning~=2.2",
    "jsonargparse[signatures]~=4.27",
    "transformers~=4.40",
    "wandb>=0.16,<0.17",
    "typer>=0.9,<0.10",
    "h5py~=3.11",
    "protobuf<=3.20",
    "datasets~=2.19",
    "pyspark>=3.5.0,<4",
    "rich>=13,<14",
    "pydoe2~=1.3",
    "smilespe>=0.0.3,<0.0.4",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pre-commit~=3.7",
]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "--color yes"

[tool.isort]
profile = "black"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
