[project]
name = "mist_demo"
version = "0.1.0"
description = "Evaluating and Finetuning MIST (Molecular Insight SMILES Transformer) models."
authors = [
    { name = "Anoushka Bhutani", email = "abhutani@umich.edu" },
    { name = "Alexius Wadell", email = "awadell@umich.edu" },
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch~=2.6",
    "torchmetrics~=1.7",
    "lightning~=2.5",
    "wandb>=0.16",
    "typer>=0.9",
    "datasets>=2.20",
    "rich>=13",
    "jsonnet>=0.21.0",
    "rdkit>=2024.3.5",
    "smirk",
    "safetensors>=0.5.1",
    "pytorch-lightning~=2.5",
    "pandas>=2.2.3",
    "numpy>=2.2.4",
    "notebook>=7.4.7",
    "peft==0.17.0",
    "plotly>=6.5.0",
    "optuna>=4.6.0",
    "scikit-learn>=1.5.1",
]
