[build-system]
build-backend = "maturin"
requires = ["maturin~=1.5"]

[project]
name = "smirk"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "transformers ~= 4.37.2",
]

[project.optional-dependencies]
test = [
    "pytest",
    "torch",
]

[tool.maturin]
include = [ "./smirk/vocab.json"]
